feat: swagger 신규 추가
- Swagger UI는 http://localhost:8080/swagger-ui.html에서 접근 가능
- API 문서는 http://localhost:8080/api-docs에서 확인 가능

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,10 @@ spring:
       hibernate:
         format_sql: true
         # dialect: org.hibernate.dialect.MariaDBDialect 
+
+# Swagger UI 설정 추가
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html  # Swagger UI 경로 설정
+  api-docs:
+    path: /api-docs  # API 문서 경로 설정 
